--- a/prolusioni.html
+++ b/prolusioni.html
@@ -1206,9 +1206,9 @@
                   non vi è dunque alcun carattere distintivo.
                   
                   Osservo allora che il sud della Francia non ha cambiato il gruppo <i>ca</i>
-                  latino in <i>tša</i>, <i>sa</i> o
+                  latino in <i>tša</i>,<i>sa</i>o
                   altro, <i>canto</i>, mentre in savoiardo c'è cambiamento
-                  <i>Qãtå</i>;
+                  Q<i>ãta</i>;
                   
                   tale carattere sarà migliore?
                   Per nulla, perché quel carattere,
